syntax = "proto3";

import "ApiServer/Common.proto";

option csharp_namespace = "HomeCtl.Servers.ApiServer";

package homectl;

service Information {
	//  Gets the client's IP address as the server perceives it.
	rpc GetClientIpAddress (Empty) returns (IpAddressResponse);

	//  Gets the server's version information.
	rpc GetServerVersion (Empty) returns (ServerVersionResponse);
}

message IpAddressResponse {
	string ipAddress = 1;
}

message ServerVersionResponse {
	Version apiServerVersion = 1;
}